[package]
name = "arcticwolf"
version = "0.1.0"
edition = "2024"

[lib]
name = "arcticwolf"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
bytes = "1.5"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }

# XDR serialization (runtime)
xdr-codec = "0.4"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
# No build dependencies - xdrgen is installed as CLI tool
